Replace favicon with personal icon

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta name="twitter:image" content="/opengraph-image.png" />
 
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.png" />
 
   <!-- Preload important resources -->
   <link rel="preload" href="/src/index.css" as="style" />
